video correctly resized and about pict moved-no white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,29 +8,38 @@ body {
 .navbar {
     margin-bottom: 0;
     border: 0;
-    width: 100%;
     background-color:#10172f;
 }
-
 nav>a {
-    width: 33%;
-}
 
+}
 .nav-item {
     padding: 0px 10px 10px 10px;
     font-family: 'Bangers', cursive, sans-serif;
 }
 
 li {
-    font-size: 2em;
+    
 }
 
 .navbar-nav .nav-link {
-    color:  #c60000;
+    
 }
 
 #collapsibleNavbar {
     text-align: center;
+}
+
+li>a {
+    font-size: 2em;
+    color:  #c60000;
+    transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+}
+
+.navbar-default .navbar-nav li a:hover {
+    color: #564F6F;
 }
 
 /*----- Home -----*/
@@ -88,8 +97,8 @@ text-align: left;
     background-size: cover;
 }
 
-.MusicLinks {
-    position: relative;
+.MusicLinksDesktop {
+    position: absolute;
     top: 200px;
     left: 100px;
 }
@@ -112,18 +121,10 @@ text-align: left;
 }
 .videoWrapper iframe {
 	position: absolute;
-	top: 175px;
-	left: 400px;
-	width: 50%;
-	height: 50%;
-}
-
-.videoWrapper>p {
-    position: absolute;
-	top: 650px;
-	left: 750px;
-	width: 50%;
-	height: 50%;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 /*----- Concerts -----*/
